adjust sword stats, more sweep radius/dmg

--- a/config/bettercombat.cfg
+++ b/config/bettercombat.cfg
@@ -222,8 +222,10 @@ bows {
     # [Potion Effect=CRIT,RECEIVE,bettercombat:brutality,1,200] -> Critical strike: Receive Brutality I for 10 seconds.
     #  [default: [[Weapon Substring=pike_] [Sound Type=POLEARM] [Animation=STAB] [Property=TWOHAND] [Sweep=0] [Additional Reach=2.0] [Knockback=0.2] [Crit Chance=0.1] [Additional Crit Damage=0.0] [Parry=true]], [[Weapon Substring=glaive_] [Sound Type=POLEARM] [Animation=SWEEP] [Property=TWOHAND] [Sweep=2] [Additional Reach=1.0] [Knockback=0.5] [Crit Chance=0.1] [Additional Crit Damage=0.0] [Parry=true]], [[Weapon Substring=spear_] [Sound Type=POLEARM] [Animation=STAB] [Property=MAINHAND] [Sweep=0] [Additional Reach=1.0] [Knockback=0.2] [Crit Chance=0.1] [Additional Crit Damage=0.0] [Parry=true]], [[Weapon Substring=lance_] [Sound Type=POLEARM] [Animation=STAB] [Property=MAINHAND] [Sweep=0] [Additional Reach=1.0] [Knockback=1.0] [Crit Chance=0.1] [Additional Crit Damage=0.0] [Parry=true]], [[Weapon Substring=halberd_] [Sound Type=POLEARM] [Animation=CHOP] [Property=TWOHAND] [Sweep=0] [Additional Reach=1.0] [Knockback=0.8] [Crit Chance=0.25] [Additional Crit Damage=0.0] [Parry=true]], [[Weapon Substring=staff] [Sound Type=POLEARM] [Animation=SWEEP] [Property=TWOHAND] [Sweep=2] [Additional Reach=1.0] [Knockback=1.0] [Crit Chance=0.1] [Additional Crit Damage=0.5] [Parry=true] [Potion Effect=CRIT,RECEIVE,minecraft:speed,2,160]], [[Weapon Substring=warhammer_] [Sound Type=BLUNT] [Animation=CHOP] [Property=VERSATILE] [Sweep=0] [Additional Reach=0.0] [Knockback=1.0][Crit Chance=0.1] [Additional Crit Damage=0.0] [Parry=true]], [[Weapon Substring=hammer_] [Sound Type=BLUNT] [Animation=CHOP] [Property=ONEHAND] [Sweep=0] [Additional Reach=0.0] [Knockback=1.5] [Crit Chance=0.1] [Additional Crit Damage=0.0] [Parry=true] [Potion Effect=CRIT,AFFLICT,minecraft:nausea,1,100]], [[Weapon Substring=mace_] [Sound Type=BLUNT] [Animation=CHOP] [Property=ONEHAND] [Sweep=0] [Additional Reach=0.0] [Knockback=0.8] [Crit Chance=0.1] [Additional Crit Damage=0.0] [Parry=true]], [[Weapon Substring=club_] [Sound Type=BLUNT] [Animation=CHOP] [Property=ONEHAND] [Sweep=0] [Additional Reach=0.0] [Knockback=0.8] [Crit Chance=0.1] [Additional Crit Damage=0.0] [Parry=true]], [[Weapon Substring=caestus] [Sound Type=BLUNT] [Animation=STAB] [Property=ONEHAND] [Sweep=0] [Additional Reach=0.0] [Knockback=0.2] [Crit Chance=0.1] [Additional Crit Damage=0.0] [Parry=true]], [[Weapon Substring=greatsword_] [Sound Type=BLADE] [Animation=SWEEP] [Property=TWOHAND] [Sweep=3] [Additional Reach=1.0] [Knockback=0.5][Crit Chance=0.1] [Additional Crit Damage=0.0] [Parry=true]], [[Weapon Substring=katana_] [Sound Type=BLADE] [Animation=CHOP] [Property=VERSATILE] [Sweep=0] [Additional Reach=0.0] [Knockback=0.5] [Crit Chance=0.1] [Additional Crit Damage=0.5] [Parry=true]], [[Weapon Substring=longsword_] [Sound Type=BLADE] [Animation=SWEEP] [Property=VERSATILE] [Sweep=1] [Additional Reach=0.0] [Knockback=0.5] Crit Chance=0.1] [Additional Crit Damage=0.0] [Parry=true]], [[Weapon Substring=saber_] [Sound Type=BLADE] [Animation=SWEEP] [Property=ONEHAND] [Sweep=1] [Additional Reach=0.0] [Knockback=0.2] [Crit Chance=0.1] [Additional Crit Damage=0.0] [Parry=true]], [[Weapon Substring=rapier_] [Sound Type=BLADE] [Animation=STAB] [Property=ONEHAND] [Sweep=0] [Additional Reach=0.0] [Knockback=0.0] [Crit Chance=0.1] [Additional Crit Damage=0.0] [Parry=true] [Potion Effect=CRIT,AFFLICT,bettercombat:bleeding,1,100]], [[Weapon Substring=battleaxe_] [Sound Type=AXE] [Animation=CHOP] [Property=VERSATILE] [Sweep=0] [Additional Reach=0.0] [Knockback=0.8] [Crit Chance=0.25] [Additional Crit Damage=0.0] [Parry=true]], [[Weapon Substring=_shovel] [Sound Type=AXE] [Animation=CHOP] [Property=ONEHAND] [Sweep=0] [Additional Reach=0.0] [Knockback=0.5] [Crit Chance=0.05] [Additional Crit Damage=0.0] [Parry=true]], [[Weapon Substring=_sword] [Sound Type=BLADE] [Animation=SWEEP] [Property=ONEHAND] [Sweep=1] [Additional Reach=0.0] [Knockback=0.2] [Crit Chance=0.1] [Additional Crit Damage=0.0] [Parry=true]], [[Weapon Substring=_pickaxe] [Sound Type=AXE] [Animation=CHOP] [Property=ONEHAND] [Sweep=0] [Additional Reach=0.0] [Knockback=0.5] [Crit Chance=0.05] [Additional Crit Damage=0.0] [Parry=true]], [[Weapon Substring=_axe] [Sound Type=AXE] [Animation=CHOP] [Property=ONEHAND] [Sweep=0] [Additional Reach=0.0] [Knockback=0.8] [Crit Chance=0.25] [Additional Crit Damage=0.0] [Parry=true]], [[Weapon Substring=_hoe] [Sound Type=AXE] [Animation=CHOP] [Property=ONEHAND] [Sweep=0] [Additional Reach=0.0] [Knockback=0.2] [Crit Chance=0.05] [Additional Crit Damage=0.0] [Parry=true]]]
     S:"Custom Weapon Tweaker" <
-        [Weapon Substring=netherrack_sword] [Sound Type=BLADE] [Animation=SWEEP] [Property=ONEHAND] [Sweep=1] [Additional Reach=0.0] [Knockback=0.5] [Crit Chance=0.15] [Additional Crit Damage=0.15] [Parry=true]
-        [Weapon Substring=pyridium_sword] [Sound Type=BLADE] [Animation=SWEEP] [Property=ONEHAND] [Sweep=1] [Additional Reach=0.0] [Knockback=0.5] [Crit Chance=0.20] [Additional Crit Damage=0.25] [Parry=true]
+        [Weapon Substring=glowood_sword] [Sound Type=BLADE] [Animation=SWEEP] [Property=ONEHAND] [Sweep=2] [Additional Reach=0.0] [Knockback=0.25] [Crit Chance=0.10] [Additional Crit Damage=0.10] [Parry=true]
+        [Weapon Substring=netherrack_sword] [Sound Type=BLADE] [Animation=SWEEP] [Property=ONEHAND] [Sweep=2] [Additional Reach=0.0] [Knockback=0.5] [Crit Chance=0.15] [Additional Crit Damage=0.15] [Parry=true]
+        [Weapon Substring=neridium_sword] [Sound Type=BLADE] [Animation=SWEEP] [Property=ONEHAND] [Sweep=2] [Additional Reach=0.0] [Knockback=0.5] [Crit Chance=0.20] [Additional Crit Damage=0.20] [Parry=true]
+        [Weapon Substring=pyridium_sword] [Sound Type=BLADE] [Animation=SWEEP] [Property=ONEHAND] [Sweep=2] [Additional Reach=0.0] [Knockback=0.5] [Crit Chance=0.25] [Additional Crit Damage=0.25] [Parry=true]
         [Weapon Substring=pike_] [Sound Type=POLEARM] [Animation=STAB] [Property=TWOHAND] [Sweep=0] [Additional Reach=2.0] [Knockback=0.2] [Crit Chance=0.1] [Additional Crit Damage=0.0] [Parry=true]
         [Weapon Substring=glaive_] [Sound Type=POLEARM] [Animation=SWEEP] [Property=TWOHAND] [Sweep=2] [Additional Reach=1.0] [Knockback=0.5] [Crit Chance=0.1] [Additional Crit Damage=0.0] [Parry=true]
         [Weapon Substring=spear_] [Sound Type=POLEARM] [Animation=STAB] [Property=MAINHAND] [Sweep=0] [Additional Reach=1.0] [Knockback=0.2] [Crit Chance=0.1] [Additional Crit Damage=0.0] [Parry=true]
@@ -242,7 +244,7 @@ bows {
         [Weapon Substring=rapier_] [Sound Type=BLADE] [Animation=STAB] [Property=ONEHAND] [Sweep=0] [Additional Reach=0.0] [Knockback=0.0] [Crit Chance=0.1] [Additional Crit Damage=0.0] [Parry=true] [Potion Effect=CRIT,AFFLICT,bettercombat:bleeding,1,100]
         [Weapon Substring=battleaxe_] [Sound Type=AXE] [Animation=CHOP] [Property=VERSATILE] [Sweep=0] [Additional Reach=0.0] [Knockback=0.8] [Crit Chance=0.25] [Additional Crit Damage=0.0] [Parry=true]
         [Weapon Substring=_shovel] [Sound Type=AXE] [Animation=CHOP] [Property=ONEHAND] [Sweep=0] [Additional Reach=0.0] [Knockback=0.5] [Crit Chance=0.05] [Additional Crit Damage=0.0] [Parry=true]
-        [Weapon Substring=_sword] [Sound Type=BLADE] [Animation=SWEEP] [Property=ONEHAND] [Sweep=1] [Additional Reach=0.0] [Knockback=0.2] [Crit Chance=0.1] [Additional Crit Damage=0.0] [Parry=true]
+        [Weapon Substring=_sword] [Sound Type=BLADE] [Animation=SWEEP] [Property=ONEHAND] [Sweep=2] [Additional Reach=0.0] [Knockback=0.2] [Crit Chance=0.1] [Additional Crit Damage=0.0] [Parry=true]
         [Weapon Substring=_pickaxe] [Sound Type=AXE] [Animation=CHOP] [Property=ONEHAND] [Sweep=0] [Additional Reach=0.0] [Knockback=0.5] [Crit Chance=0.05] [Additional Crit Damage=0.0] [Parry=true]
         [Weapon Substring=_axe] [Sound Type=AXE] [Animation=CHOP] [Property=ONEHAND] [Sweep=0] [Additional Reach=0.0] [Knockback=0.8] [Crit Chance=0.25] [Additional Crit Damage=0.0] [Parry=true]
         [Weapon Substring=_hoe] [Sound Type=AXE] [Animation=CHOP] [Property=ONEHAND] [Sweep=0] [Additional Reach=0.0] [Knockback=0.2] [Crit Chance=0.05] [Additional Crit Damage=0.0] [Parry=true]
@@ -297,24 +299,6 @@ enchantments {
     B:"Webbing Enchantment Enabled"=true
 }
 
-
-general {
-    B:"Attack & Sprint"=true
-    B:"Cancel Spartan Weaponry Fatigue"=true
-    B:"Digging Grass Paths Requires Animation"=true
-    D:"Extra Attack Height"=0.75
-    D:"Extra Attack Width"=0.25
-    B:"Fast Equip Hotbar Only"=false
-    D:"Intertia on Attack"=0.5
-    S:"Nausea Affects Mobs"=2.2
-    B:"Override Left And Right Click Keybinds"=true
-    B:"Show Shield Cooldown Crosshair"=true
-    S:"Silver Armor Damage"=1.5
-    B:"Stripping Bark Requires Animation"=false
-    B:"Tilling Land Requires Animation"=true
-}
-
-
 knockback {
     # Enable have the KNOCKBACK_RESISTANCE attribute instead reduce the strength of knockback effects, rather than reducing the chance to not be knocked back. (By default in Minecraft, a knockback_resistance of 0.6 means a 60% chance for that entity to NOT be knocked back from an attack. However, if this setting is true, a knockback_resistance of 0.6 instead means the distance/effect of being knocked back are 60% less far/powerful for that entity. [default: true]
     B:"Better Knockback"=true
@@ -344,7 +328,7 @@ other {
     D:"Extra Attack Height"=0.75
 
     # How wide, on all directions, the hitbox will be extended for melee attacks. Increase the value of this setting to make the XZ-accuracy of attacks more forgiving. 1.0 is equal to an additional block width on XZ sides.
-    D:"Extra Attack Width"=0.25
+    D:"Extra Attack Width"=0.5
 
     # Set to true to have Fast Equip use only items in the hotbar instead of the entire inventory. The Fast Equip keybind is set to X, check the minecraft keybind settings to change this. [default: false]
     B:"Fast Equip Hotbar Only"=false
@@ -461,6 +445,8 @@ swords {
     # For example, if this field is set to 0.2, a matched sword would have the Attack Speed value increased by 0.2.
     # If that sword had an Attack Speed of 1.6, it would become 1.8. This field can also accept negative values, such as -0.6. [default: [[Sword Substring=golden_sword]		[Additional Attack Speed=0.2]], [[Sword Substring=wooden_sword]		[Additional Attack Speed=0.1]]]
     S:"Sword Tweaker" <
+        [Sword Substring=netherrack_sword]		[Additional Attack Speed=-0.2]
+        [Sword Substring=neridium_sword]		[Additional Attack Speed=-0.1]
         [Sword Substring=golden_sword]		[Additional Attack Speed=0.4]
         [Sword Substring=wooden_sword]		[Additional Attack Speed=0.4]
      >
