--- a/config/DiscordRPC.cfg
+++ b/config/DiscordRPC.cfg
@@ -2,7 +2,7 @@
 
 richpresence {
     # First line of Rich Presence
-    S:"Client Name"=TREPIDATION v0.4.4
+    S:"Client Name"=TREPIDATION v0.4.5
 
     # No placeholders supported, Text that shows when you are in the main menu
     S:MainMenu=In Main Menu
@@ -13,7 +13,7 @@ richpresence {
     # %dimensionName% - The name of the dimension
     # %dimensionID% - The ID of the current dimension
     # %biome% - The current Biome
-    S:"Singleplayer Text"=Playing singleplayer
+    S:"Singleplayer Text"=Running alone
 
     # Placeholders:
     # %ip%  Server IP
@@ -24,7 +24,7 @@ richpresence {
     # %dimensionName% - The name of the dimension
     # %dimensionID% - The ID of the current dimension
     # %biome% - The current Biome
-    S:"Server Text"=Playing on a server with %otherpl% other players.
+    S:"Server Text"=Running with %otherpl% other people.
 
     # Do you want to use custom Hypixel integration (show what game you are playing and such)?
     B:Hypixel-Integration=true
