--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -128,7 +128,6 @@ definitions {
 
     #  [default: ]
     S:level10_entries <
-        %Blaze
         contenttweaker:vitality_orb
         %Alpha
         @nethercraft
@@ -139,6 +138,7 @@ definitions {
         cyclicmagic:charm_antidote
         quark:black_ash
         minecraft:blaze_powder
+        minecraft:blaze_rod
         minecraft:magma_cream
         minecraft:fire_charge
         %Bandages
