--- a/config/tips.cfg
+++ b/config/tips.cfg
@@ -22,7 +22,7 @@ general {
         Most food in the Nether provide beneficial effects.
         Magma eggs and fire charges can be thrown.
         A Ghast Bomb can be crafted to explode blocks.
-        You can walk hang by holding shift on a wall.
+        You can wall hang by holding shift on a wall.
         Pickaxes, torches, and a few other items never drop on death.
         Craft a backpack before you head into the Erebus.
         Use a Soul Anchor to set your spawn after arriving in a new dimension.
