--- a/config/tips.cfg
+++ b/config/tips.cfg
@@ -38,6 +38,7 @@ general {
         Review TREPIDATION on mmcreviews.com!
         Watch the trailer for TREPIDATION if you haven't already!
         Support development on Ko-fi!
+        In this eternal cycle, you are but fleeting shadows.
      >
 
     # The color of the actual tip text. [default: FFFFFF]
