--- a/config/tips.cfg
+++ b/config/tips.cfg
@@ -15,11 +15,11 @@ general {
         Progression after the Nether is a placeholder and WIP.
         Essential progression items have been added as bookmarks in JEI.
         Stock up on food before you head into the Erebus and Deep Dark.
-        You can dash mid-air continously to cross lava oceans or caverns.
+        You can dash mid-air continuously to cross lava oceans or caverns.
         Press left ALT to dash. Each dash gives 1 second of invulnerability.
         Each dash gives 1 second of invulnerability (1s i-frame)
         Double jump to stop fall damage.
-        Most food in the Nether provide beneficial effects.
+        Most foods in the Nether provide beneficial effects.
         Magma eggs and fire charges can be thrown.
         A Ghast Bomb can be crafted to explode blocks.
         You can wall hang by holding shift on a wall.
@@ -39,6 +39,7 @@ general {
         Watch the trailer for TREPIDATION if you haven't already!
         Support development on Ko-fi!
         In this eternal cycle, you are but fleeting shadows.
+        Each step you take is one walked by countless before you, each as insignificant as the last.
      >
 
     # The color of the actual tip text. [default: FFFFFF]
