--- a/config/betterhurttimer.cfg
+++ b/config/betterhurttimer.cfg
@@ -60,6 +60,8 @@ general {
                 ^indirectMagic$:10
                 ^thorns$:5
                 ^explosion\.player$:5
+                ^skill$:20
+                ^indirectSkill$:20
              >
 
             # Default value replacing vanilla's iFrame after being hurt
@@ -123,7 +125,7 @@ general {
             # Attack reload speed before the attack is canceled (Players only)
             # Min: 0.0
             # Max: 1.0
-            D:attackThresholdPlayer=0.5
+            D:attackThresholdPlayer=0.0
 
             # Items that need a specific attack reload speed. [Overwrites mob specific attack threshold]
             # 
@@ -178,7 +180,7 @@ general {
             I:damageColor=16711680
             B:doHurtCameraEffect=true
             I:healColor=65280
-            B:showDamageParticles=true
+            B:showDamageParticles=false
         }
 
     }
