Add RLMixins mod

--- a/config/rlmixins.cfg
+++ b/config/rlmixins.cfg
@@ -211,13 +211,13 @@ general {
         B:"Battletower Golem Attack Target Patch (Battletowers)"=false
 
         # Stops Better Foliage's enable toggle from Chunk Animator XRaying
-        B:"Better Foliage Chunk XRay (BetterFoliage/ChunkAnimator)"=false
+        B:"Better Foliage Chunk XRay (BetterFoliage/ChunkAnimator)"=true
 
         # Modifies BetterFoliage geometry checks to not create a new BlockPos if offset is 0
-        B:"BetterFoliage Geometry Offset (BetterFoliage)"=false
+        B:"BetterFoliage Geometry Offset (BetterFoliage)"=true
 
         # Caches the results of BetterFoliage Class whitelist/blacklist checks for performance and memory usage
-        B:"BetterFoliage Whitelist/Blacklist Cache (BetterFoliage)"=false
+        B:"BetterFoliage Whitelist/Blacklist Cache (BetterFoliage)"=true
 
         # Fixes a memory leak in BetterNether when going from singleplayer to multiplayer (Thanks to Meldexun)
         B:"BetterNether Memory Leak Fix (BetterNether)"=false
@@ -316,7 +316,7 @@ general {
         B:"Delayed Launch (PotionCore)"=false
 
         # Disables Mo'Bends online checks that can cause the game to freeze on loading
-        B:"Disable MoBends Online Checks (MoBends)"=false
+        B:"Disable MoBends Online Checks (MoBends)"=true
 
         # Disables Waystones from saving used waystone names, can cause repeated names but prevents lag on larger servers
         B:"Disable Waystones Used Name Check (Waystones)"=false
@@ -334,7 +334,7 @@ general {
         B:"DynamicTrees AABB Cache (DynamicTrees)"=false
 
         # Modifies EnhancedVisual's death messages to be translatable
-        B:"EV Death Message Translation (EnhancedVisuals)"=false
+        B:"EV Death Message Translation (EnhancedVisuals)"=true
 
         # Skips checking oversized AABB for collisions when teleporting long distances, causing extreme lag.
         B:"EXPERIMENTAL: Teleporting Lag Patch (Vanilla)"=false
@@ -343,7 +343,7 @@ general {
         B:"Education Tweak (BetterSurvival)"=false
 
         # Rewrites Elenai Dodge's TickEventListener for better performance when ability caps and cooldowns are set to 0
-        B:"Elenai Dodge Better Tick Performance (Elenai Dodge)"=false
+        B:"Elenai Dodge Better Tick Performance (Elenai Dodge)"=true
 
         # Attempts to stop the ability to cheese dragons on the edge of render distance
         B:"Enable AntiDragon Cheese (IceAndFire)"=false
@@ -355,7 +355,7 @@ general {
         B:"Enchantment ItemStack Damage (Vanilla/SME)"=false
 
         # Patches Quarks EnderWatcher to greatly improve performance
-        B:"EnderWatcher Performance Patch (Quark)"=false
+        B:"EnderWatcher Performance Patch (Quark)"=true
 
         # MC-92916 patch, created by EigenCraft Unofficial Patch
         B:"Entity Tracker Desync (Vanilla)"=false
@@ -397,19 +397,19 @@ general {
         B:"Infernal Particle Spam (InfernalMobs)"=false
 
         # Tags mobs spawned from Infested Champions as summoned, allowing for Trinkets and Baubles to cancel their xp/item drops
-        B:"Infested Summon Tag (Champions/TrinketsAndBaubles)"=false
+        B:"Infested Summon Tag (Champions/TrinketsAndBaubles)"=true
 
         # Makes ItemPhysics use the player's reach attribute instead of a hardcoded value
         B:"Item Reach Attribute (ItemPhysics)"=false
 
         # Makes JEI ignore anvil enchantment recipes to save on memory
-        B:"JEI Ignore Anvil Recipes (JEI)"=false
+        B:"JEI Ignore Anvil Recipes (JEI)"=true
 
         # Reverts the behavior of JEI moving bookmarks out of the config folder
         B:"JEI Revert Bookmark Location Changes (JEI)"=false
 
         # Suppresses JEI outputting too many input errors related to Varied Commodities
-        B:"JEI Suppress Varied Commodities Errors (JEI)"=false
+        B:"JEI Suppress Varied Commodities Errors (JEI)"=true
 
         # Increases the time that Jailer Champions apply the Jailed effect for, since the original mixes up seconds and ticks
         B:"Jailer Champion Time (Champions)"=false
@@ -421,7 +421,7 @@ general {
         B:"Lost Cities No Respawn (Lost Cities)"=false
 
         # Lower the player's eye height while crouching to be more like newer versions
-        B:"Lowered Crouch (Vanilla)"=false
+        B:"Lowered Crouch (Vanilla)"=true
 
         # Modify the render bounding boxes of some Lycanite mobs to fix under/oversized render boxes
         B:"Lycanite Render Box (LycanitesMobs)"=false
@@ -442,10 +442,10 @@ general {
         B:"Mending Priorities (Vanilla)"=false
 
         # Fixes certain particles sent to the client from serverside never actually rendering, created by RandomPatches
-        B:"Missing Particle Rendering (Vanilla)"=false
+        B:"Missing Particle Rendering (Vanilla)"=true
 
         # Fixes multiple memory leaks in MoBends (Thanks to Meldexun)
-        B:"MoBends Memory Leak Fix (MoBends)"=false
+        B:"MoBends Memory Leak Fix (MoBends)"=true
 
         # Allows for setting different minimum and maximum Gamma values
         B:"Modify Gamma Max And Min (Vanilla)"=false
@@ -502,7 +502,7 @@ general {
         B:"Potion Amplifier Visibility (Vanilla)"=false
 
         # Blacklists PotionCore Revival/1UP potion from affecting non-players, to prevent duping.
-        B:"Prevent Revival Potion on Non-Players (PotionCore)"=false
+        B:"Prevent Revival Potion on Non-Players (PotionCore)"=true
 
         # Prevents Charm Crates from being inserted into Shulker Boxes, manually and by hopper.
         B:"Prevent Shulker Crate Insertion (Vanilla/Charm)"=false
@@ -514,25 +514,25 @@ general {
         B:"QualityTools Limit Modifiers (QualtiyTools)"=false
 
         # Fixes crashes caused by Quark's chat linking when items with large nbt are linked
-        B:"Quark Chat Link NBT Crash (Quark)"=false
+        B:"Quark Chat Link NBT Crash (Quark)"=true
 
         # Fixes Quark boat chests duping
         B:"Quark Chest Boat Dupe (Quark)"=false
 
         # Forcibly disable Quarks Emotes for performance
-        B:"Quark Emotes Force Disable (Quark)"=false
+        B:"Quark Emotes Force Disable (Quark)"=true
 
         # Force disables Quarks Potion Colorizer from running and wasting performance and networking
-        B:"Quark Force Disable Potion Colorizer (Quark)"=false
+        B:"Quark Force Disable Potion Colorizer (Quark)"=true
 
         # Reduces the frequency of Quark attempting to replace villager AI to open double doors for performance
-        B:"Quark Reduced Villager Double Door AI Checks (Quark)"=false
+        B:"Quark Reduced Villager Double Door AI Checks (Quark)"=true
 
         # Fixes Quark's armor rune enchantment glint not working when Optifine is installed
-        B:"Quark Rune Optifine Fix (Quark)"=false
+        B:"Quark Rune Optifine Fix (Quark)"=true
 
         # Forcibly disable Quarks Springy Slime check for performance
-        B:"Quark Springy Slime Force Disable (Quark)"=false
+        B:"Quark Springy Slime Force Disable (Quark)"=true
 
         # Fixes not being able to use Iron Canteen and Dragon Canteen on Rain Collectors
         B:"Rain Collector Canteen Fix (SimpleDifficulty)"=false
@@ -550,10 +550,10 @@ general {
         B:"Remove Shield Protection Enchant (Inspirations)"=false
 
         # Disables water from forced updates on chunk gen
-        B:"Remove Water Chunk Gen Ticking (Vanilla)"=false
+        B:"Remove Water Chunk Gen Ticking (Vanilla)"=true
 
         # Replaces SRParasites Living and Sentient armor models with custom models
-        B:"Replace Parasite Armor Models (SRParasites)"=false
+        B:"Replace Parasite Armor Models (SRParasites)"=true
 
         # Fix Reskillable cancelling indirect self damage
         B:"Reskillable Indirect Self Damage Patch (Reskillable)"=false
@@ -562,7 +562,7 @@ general {
         B:"Rusting Curse Negative Durability Patch (Charm)"=false
 
         # Attempts to fix a desync caused by ScalingHealth when a mob dies in the same tick it is spawned
-        B:"ScalingHealth Death Desync (ScalingHealth)"=false
+        B:"ScalingHealth Death Desync (ScalingHealth)"=true
 
         # Replace the effect from the Scarlite Sword with a config-able effect
         B:"Scarlite Sword Config Effect (DefiledLands)"=false
@@ -577,7 +577,7 @@ general {
         B:"Slowed Item Entity Movement (Vanilla)"=false
 
         # Smooth eye height when crouching, created by RandomPatches
-        B:"Smoothed Crouching (Vanilla)"=false
+        B:"Smoothed Crouching (Vanilla)"=true
 
         # Modifies SoManyEnchantments to fix a crash with TickDynamic, and improve performance
         B:"SoManyEnchantments TickDynamic Crash (SoManyEnchantments)"=false
@@ -595,10 +595,10 @@ general {
         B:"Stoned Chicken Feather Fix (Quark/IceAndFire)"=false
 
         # Patches Dupe bug with Stonelings
-        B:"Stoneling Dupe Patch (Quark)"=false
+        B:"Stoneling Dupe Patch (Quark)"=true
 
         # Forces Stonelings to assume minimum entity eyeheight to prevent infinite loops
-        B:"Stoneling Eyeheight Stall Patch (Quark)"=false
+        B:"Stoneling Eyeheight Stall Patch (Quark)"=true
 
         # Makes nether portals not spawn zombie pigmen, to prevent farming.
         B:"Stop Pigmen Portal Spawning (Vanilla)"=false
