begone emotes that no one uses

--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -1669,7 +1669,7 @@ vanity {
     B:"Boat sails"=true
     B:"Dyable elytra"=true
     B:"Dye item names"=true
-    B:"Emote system"=true
+    B:"Emote system"=false
     B:"Firework cloning"=true
     B:"Sit in stairs"=true
     B:"Witch hat"=true
@@ -1690,22 +1690,10 @@ vanity {
          >
 
         # Should keybinds for emotes be generated? (They're all unbound by default)
-        B:"Enable Keybinds"=true
+        B:"Enable Keybinds"=false
 
         # The enabled default emotes. Remove from this list to disable them. You can also re-order them, if you feel like it.
         S:"Enabled Emotes" <
-            no
-            yes
-            wave
-            salute
-            cheer
-            clap
-            think
-            point
-            shrug
-            headbang
-            weep
-            facepalm
          >
     }
 
