prep for future techguns implementation

--- a/config/bettercombat.cfg
+++ b/config/bettercombat.cfg
@@ -162,6 +162,11 @@ bows {
     # (Class) Item Blacklist.
     # Blacklisted item classes. This is an advanced setting, as it requires you to look through the source code of the mod that you are trying to add the class from. If an item is added to this list, it will have the default left-click and right-click behavior. This setting is useful for gun mods, or items that need to have their default left-click and right-click functionality. Example config value:    com.flansmod.common.guns.ItemGun    com.mrcrayfish.guns.item.ItemGun    techguns.items.guns.GenericGun    com.paneedah.mwc.weapons.Guns    com.jozufozu.yoyos.common.ItemYoyo [default: ]
     S:"(Class) Item Blacklist" <
+        com.flansmod.common.guns.ItemGun
+        com.mrcrayfish.guns.item.ItemGun
+        techguns.items.guns.GenericGun
+        com.paneedah.mwc.weapons.Guns  
+        com.jozufozu.yoyos.common.ItemYoyo
      >
 
     # (Class) Item Whitelist.
