--- a/config/tips.cfg
+++ b/config/tips.cfg
@@ -13,9 +13,11 @@ general {
         Don't be afraid to reset your runs to apply skills you've learned.
         Searching recipes and uses in JEI is vital to progress.
         Progression after the Nether is a placeholder and WIP.
-        Essential progression items have been added as bookmarks in JEI.
-        Stock up on food before you head into the Erebus and Deep Dark.
+        Some essential progression items are bookmarked in JEI.
+        Stock up on food before you head into the Deep Dark.
         You can dash mid-air continuously to cross lava oceans or caverns.
+        Press left ALT to dash. Each dash gives 1 second of invulnerability.
+        Press left ALT to dash. Each dash gives 1 second of invulnerability.
         Press left ALT to dash. Each dash gives 1 second of invulnerability.
         Each dash gives 1 second of invulnerability (1s i-frame)
         Double jump to stop fall damage.
@@ -29,14 +31,13 @@ general {
         Join the Discord to discuss strategies and compete for the world record.
         The official world record for beating the Wither is less than 6 minutes.
         Did you know? He is in every world you make.
-        The voices are getting louder.
         There is no escape.
         Go into the darkness.
         "Rebirth Nearby" may not always be the best option.
         "Rebirth Nearby" spawns you 50-75 blocks from your last death.
         If you die within 20s of using "Rebirth Nearby", that option will be locked.
         Review TREPIDATION on mmcreviews.com!
-        Watch the trailer for TREPIDATION if you haven't already!
+        Watch the trailer for TREPIDATION on YouTube!
         Support development on Ko-fi!
         In this eternal cycle, you are but fleeting shadows.
         Each step you take is one walked by countless before you, each as insignificant as the last.
