--- a/config/champions.cfg
+++ b/config/champions.cfg
@@ -25,6 +25,7 @@ general {
 
     # Set which dimensions, listed as number ids, are blacklisted or whitelisted for champion mobs, leave blank to disable this option
     S:"Dimension List" <
+        684
      >
 
     # Set whether the dimension configuration is blacklisted or whitelisted
@@ -62,6 +63,9 @@ general {
         minecraft:silverfish
         beneath:shadow
         eyesinthedarkness:eyes
+        betterswim:herobrine
+        dimdoors:mob_monolith
+        weeping-angels:weepingangel
      >
 
     # Set whether the mob configuration is blacklisted or whitelisted
