i am fucking EVIL!!!!
weeping angels now steal entire stacks of torches HAHAHAHA

--- a/config/Weeping Angels.cfg
+++ b/config/Weeping Angels.cfg
@@ -60,7 +60,6 @@ general {
 
         # List of blocks that you should be able to see angels through
         S:transparent_blocks <
-            modid:block_name
          >
 
         # XP gained from angels
@@ -110,7 +109,7 @@ general {
 
     worldgen {
         # Config to toggle the generation of arms in snow biomes
-        B:arms=true
+        B:arms=false
 
         # Chance to generate catacombs? 1 chance of ... (default :25)
         I:chanceCatacombs=25
@@ -119,15 +118,13 @@ general {
         B:genCatacombs=false
 
         # Configure whether the mods ores spawn. This MAY require a restart when changed.
-        B:genOres=true
+        B:genOres=false
     }
 
     integrations {
         # List of items the Weeping angels will be able to steal from you
         S:keyStrings <
-            thedalekmod:tardisKey
-            tardis:key
-            tardis:key_01
+            minecraft:torch
          >
 
         # Whether the angel will drain a TARDIS of it's fuel or not
