--- a/config/jei/itemBlacklist.cfg
+++ b/config/jei/itemBlacklist.cfg
@@ -10,6 +10,9 @@
 
 advanced {
     S:itemBlacklist <
+        minecraft:enchanted_book
+        minecraft:tipped_arrow
+        minecraft:lingering_potion
         cyclicmagic:ender_lightning
         simpleores:mythril_sword
         cyclicmagic:solidifier
