--- a/config/rltweaker.cfg
+++ b/config/rltweaker.cfg
@@ -142,8 +142,6 @@ general {
 
         # Allows for mounted combat with BetterCombat
         B:betterCombatMountFix=true
-
-        # Enables features for ticking chunk blocks
         B:chunkTicks=true
 
         # Fixes mobs having trouble pathing through open doors
@@ -152,17 +150,8 @@ general {
         # Enable to write modified classes to disk.
         B:export=false
 
-        # Fixes gorgon issues in Ice and Fire 1.7.1, do not enable this patch for other versions!
-        B:fixOldGorgon=false
-
-        # Fixes hippocampus issues in Ice and Fire 1.7.1, do not enable this patch for other versions!
-        B:fixOldHippocampus=false
-
         # Fixes crash with bound scrolls and return scrolls, and removes their unexpected spawn setting
         B:fixWaystoneScrolls=true
-
-        # Fixes Myrmex Queen hive spam
-        B:iafFixMyrmexQueenHiveSpam=true
 
         # Makes some entities stop checking for large entity collisions. Not needed without a max entity radius changing mod.
         B:lessCollisions=true
@@ -173,9 +162,6 @@ general {
         # Makes the particle queue threaded. Fixes concurrency issue with logical server creating physical client particles.
         B:particleThreading=true
 
-        # Enables config option to tweak amphithere tame damage
-        B:patchAmphithereTameDamage=false
-
         # Fixes some mod related anvil dupes
         B:patchAnvilDupe=true
 
@@ -184,6 +170,9 @@ general {
 
         # Fixes Chest of Drawers from BetterNether not dropping its content when broken
         B:patchChestOfDrawers=true
+
+        # Allows cleaning up structure .dat files.
+        B:patchCleanupStructureWorldgenFiles=true
 
         # Enables config options to tweak what effects are incurable
         B:patchCurePotion=true
@@ -200,11 +189,17 @@ general {
         # Fixes falling block portal dupe.
         B:patchFallingBlockPortalDupe=true
 
+        # Optimizes World#getCollisionBoxes which often requires a lot of cpu time on servers.
+        B:patchFasterBlockCollision=true
+
         # Allows for some hopper tweaks
         B:patchHopper=false
 
         # Patches a dupe with modded item frames, specifically Quark
         B:patchItemFrameDupe=true
+
+        # Fix for item linking from Quark.
+        B:patchItemLinking=true
 
         # Fixes modifier books from BountifulBaubles changing the original item when put into an anvil
         B:patchModifierBooks=true
@@ -215,11 +210,20 @@ general {
         # Requires patchCustomAttributeInstances patch! Fixes Potion Core Resistance calculations
         B:patchPotionCoreResistance=true
 
+        # Fix potion changes on players causing unnecessary entity tracker updates.
+        B:patchPotionEntityTrackerUpdate=true
+
         # Enables Entity Push Prevention
         B:patchPushReaction=false
 
         # Enable to make wine potion effect modifications configurable through RLTweaker
         B:patchRusticWineEffects=true
+
+        # Improves performance and fixes bugs of EntityAIInfectedSearch and EntityAINearestAttackableTargetStatus.
+        B:patchSRPAI=true
+
+        # Replaces the random update handler from Serene Seasons with a faster alternative.
+        B:patchSSRandomUpdateHandler=false
 
         # Fixes ghost chunkloading when creating pathfinding chunk caches
         B:pathfindingChunkCacheFix=true
@@ -259,9 +263,31 @@ general {
             # Min: 2.0
             # Max: 4.0E7
             D:"Broadcasted Sounds Distance Limit"=1000.0
-
-            # Cleans up Mineshaft .dat files regularly to lower RAM usage. May break mods that need to locate Mineshafts.
             B:"Cleanup Mineshaft Worldgen Files"=true
+
+            # ALWAYS: All structures get always deleted
+            # ALWAYS_COMPONENTS_ONLY: All components get always deleted
+            # GENERATED: Structures that are fully generated get deleted
+            # GENERATED_COMPONENTS: Components that are fully generated and structures that have no components get deleted
+            # GENERATED_COMPONENTS_ONLY: Components that are fully generated get deleted
+            # DISABLED: Nothing gets deleted
+            # Valid values:
+            # ALWAYS
+            # ALWAYS_COMPONENTS_ONLY
+            # GENERATED
+            # GENERATED_COMPONENTS
+            # GENERATED_COMPONENTS_ONLY
+            # DISABLED
+            S:"Cleanup Structure Worldgen Files Mode"=GENERATED_COMPONENTS_ONLY
+
+            # Structure (or structure component) bounding boxes larger than this value on one axis will be ignored.
+            I:"Cleanup Structure Worldgen Files Size Limit"=4096
+
+            # Cleans up structure .dat files regularly to lower RAM usage. May break mods that use this data. (Stronghold, Village, Mineshaft, Temple, Monument, Mansion, Fortress, EndCity)
+            S:"Cleanup Structure Worldgen Files Structures" <
+                Village
+                Mineshaft
+             >
 
             # Container class names to enforce player distance (to prevent dupes and other glitchy behavior). Must be the full qualified class name of the containers.
             S:"Container Distance Classes" <
@@ -299,9 +325,6 @@ general {
 
             # Enables investigate AI for non-player attacks. Might cause lags.
             B:"Investigate non-player Attacks"=false
-
-            # Requires lessCollisions patch, change that config value instead, don't change this unless you are benchmarking
-            B:"Less Collisions"=true
 
             # Whether lightning should destroy items
             B:"Lightning Destroys Items"=true
@@ -599,41 +622,6 @@ general {
         }
 
         ##########################################################################################################
-        # ice and fire
-        #--------------------------------------------------------------------------------------------------------#
-        # Ice and Fire tweaks
-        ##########################################################################################################
-
-        "ice and fire" {
-            # Requires patchAmphithereTameDamage patch! Damage that Amphitheres deal when a player tries to tame them.
-            D:"Amphithere Tame Damage"=1.0
-
-            # Stop deathworm egg drops from being affected by looting
-            B:"Deathworm Eggs Ignore Looting"=false
-
-            # Master switch for this mod compatibility
-            B:ENABLED=true
-
-            # Fixes Myrmex Queen trades that generate with the wrong type of resin
-            B:"Myrmex Queen Trade Fix"=true
-
-            # Removes snow trade for RLCraft balancing. Only works in Ice and Fire 1.7.1
-            B:"RLCraft Trade Balancing"=false
-
-            # Interact with dragons with only the right hand
-            B:"Right Hand Dragon Interaction"=true
-
-            # Prevent statues from saving some data they should not
-            B:"Statue Data Fixes"=true
-
-            # Prevent statues from picking up items (and other mob griefing events)
-            B:"Statue Mob Griefing Fix"=true
-
-            # Prevents gorgons from targeting player statues. The presence of player statues will still give their AI trouble.
-            B:"Stop Gorgon Targeting Player Statues"=true
-        }
-
-        ##########################################################################################################
         # infernal mobs
         #--------------------------------------------------------------------------------------------------------#
         # Infernal Mobs tweaks
@@ -735,6 +723,9 @@ general {
 
             # Master switch for this mod compatibility
             B:ENABLED=true
+
+            # Server side item linking cooldown (in ticks). Requires 'patchItemLinking' to be true!
+            I:"Item Linking Cooldown"=100
         }
 
         ##########################################################################################################
@@ -889,20 +880,6 @@ general {
 
             # Fix for rustic log and wood not having their tool set to axe. May act strangely if not matched on the client.
             B:"Wood Harvest Tool Fix"=false
-        }
-
-        ##########################################################################################################
-        # serene seasons
-        #--------------------------------------------------------------------------------------------------------#
-        # Serene Seasons tweaks
-        ##########################################################################################################
-
-        "serene seasons" {
-            # Master switch for this mod compatibility
-            B:ENABLED=true
-
-            # REQUIRES Patch chunkTicks. Replaces the random update handler with a faster alternative
-            B:"Replace Random Update Handler"=true
         }
 
         ##########################################################################################################
