bauble red border

--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -90,6 +90,8 @@ definitions {
         mysticstaffs:heal_staff
         contenttweaker:deviled_egg_sandwich
         %Infernium
+        artifacts:shiny_red_balloon
+        artifacts:flame_pendant
      >
 
     #  [default: ]
