disable wither healing, misc

--- a/config/Wither Config.cfg
+++ b/config/Wither Config.cfg
@@ -34,6 +34,11 @@ general {
             I:tickDelay=5
         }
 
+        healing {
+            D:invulnerableHealing=10.0
+            D:vulnerableHealing=0.0
+        }
+
     }
 
 }
