--- a/config/HitIndication.cfg
+++ b/config/HitIndication.cfg
@@ -14,6 +14,9 @@ client {
     B:enable_distance_scaling=true
     I:distance_scaling_cutoff=10
     B:enable_hit_markers=true
+    B:edge_of_screen_mode=false
+    S:hit_indicator_color=FF0000
+    S:block_indicator_color=0000FF
 }
 
 
