--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -92,6 +92,7 @@ definitions {
         %Infernium
         artifacts:shiny_red_balloon
         artifacts:flame_pendant
+        %Ghast
      >
 
     #  [default: ]
