skill book now pauses the game

--- a/config/FlexiPause.cfg
+++ b/config/FlexiPause.cfg
@@ -13,6 +13,7 @@ general {
     # This will cause the game to not pause when the esc menu is opened.
     S:"Pause Overrides" <
         mezz.jei.gui.recipes.RecipesGui:true
+        arekkuusu.enderskills.client.gui.GuiScreenSkillAdvancements:true
      >
 
     client {
